syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_outer_classname = "FollowerEventProto";

message FollowerEvent {
  int64 user_id = 1;
  google.protobuf.Timestamp event_time = 2;
}
